# Home-Based-Markerless-Movement-Analysis-Subsystem-Website

./: .gitignore  ADMIN_UI_PROGRESS.md  AGENTS.md  CLAUDE.md  PROJECT_FLOW_FOR_AI.md  Project 101_ Team 5 (1).md  README.md  docker-compose.e2e.yml  index.html  package-lock.json  package.json  playwright.config.ts  progress-backend-v1-mediapipe-integration.md  progress-patient-record-video-preview.md  progress-project-flow-for-ai.md  tailwind.config.ts  vite-live.err  vite-session.err  vite.config.ts
.claude/: launch.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/core/: auth.py  config.py
backend/app/db/: mongo.py
backend/app/routers/: __init__.py  admin.py  analysis.py  auth.py  doctor.py  patient.py  patients.py  uploads.py
backend/app/services/: analysis.py  audit.py  common.py  login_throttle.py  mediapipe.py  movement_tasks.py  session_mapper.py  sessions.py  storage.py  task_catalog.py  uploads.py  users.py
backend/backend/uploads/: file_472c6d15ac0e4d929253fa42b1352257.webm  file_6234692ae85340e2bec35e3278900d2b.webm  file_8f85bac844cb4e189fc7525521ace367.webm  file_9e57f081eec94bf2bd6188db2b0e99a1.webm  file_ad6d94079b1d4e7b864e68fd6f8b9d36.webm  file_c633d96804e448af92c308267ea761fe.webm  file_e9ac7e77ba6c486d8f7568b395ebc4d9.webm
backend/scripts/: manage_auth.py
src/: main.tsx
src/app/: AuthLoadingScreen.tsx  AuthLoginPage.tsx  ChangePasswordPage.tsx  LandingPage.tsx  ProtectedRoute.tsx  RoleEntryRoute.tsx  providers.tsx  router.tsx  useValidatedRoleSession.ts
(+74 files in other folders)
