[project]
name = "movement-analysis-backend"
version = "0.1.0"
description = "FastAPI backend for patient, doctor, and MediaPipe movement analysis integration."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "motor>=3.6.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
